book/tests/snapshots/snapshot__run_display_reference_prql@name-resolving-1.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/internals/name-resolving-1.prql
---
from employees
derive [
  first_name,
  dept_id,
]
join d = departments [~dept_id]
select [
  first_name,
  d.title,
  created_at,
]



