book/tests/snapshots/snapshot__run_display_reference_prql@pipelines-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/queries/pipelines-1.prql
---
prql dialect:generic

from employees
derive gross_salary = salary + payroll_tax


