book/tests/snapshots/snapshot__run_display_reference_prql@pipelines-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/queries/pipelines-3.prql
---
prql dialect: generic

from e = employees
derive gross_salary = salary + payroll_tax
sort gross_salary
take 10
join d = department [dept_no]
select [
  e.name,
  gross_salary,
  d.name,
]

