book/tests/snapshots/snapshot__run_display_reference_prql@ranges-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/language-features/ranges-1.prql
---
prql dialect:generic

from `orders`
sort [
  -`value`,
  `date`,
]
take 101..110


