book/tests/snapshots/snapshot__run_display_reference_prql@s-strings-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/language-features/s-strings-1.prql
---
prql dialect:generic

from employees
aggregate [average salary]


