book/tests/snapshots/snapshot__run_display_reference_prql@s-strings-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/language-features/s-strings-2.prql
---
prql dialect: generic

from de = dept_emp
join s = salaries side:left [
  s.emp_no == de.emp_no,
  s"({s.from_date}, {s.to_date})
  OVERLAPS
  ({de.from_date}, {de.to_date})",
]

