book/tests/snapshots/snapshot__run_display_reference_prql@s-strings-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/language-features/s-strings-3.prql
---
prql dialect:generic

from employees
derive [has_valid_title = s"regexp_contains(title, '([a-z0-9]*-){2,}')"]


